# uwnav_dynamics

./: .gitignore  CITATION.cff  LICENSE  README.md  offnav_env_min.yml  pyproject.toml
apps/dev/: test_dvl_plots.py  test_imu_pipeline.py  test_power_plots.py
apps/tools/: pwm_preprocess_and_plot.py
configs/align/: pooltest02.yaml
configs/dataset/: pooltest02.yaml  pooltest02_s1.yaml
configs/preprocess/: imu.yaml
configs/train/: pooltest02_s1_lstm_v0.yaml
data/raw/2026-01-06_pooltest01/dvl/: dvl_parsed_20260104_195317.csv  dvl_raw_lines_20260104_195317.csv  dvl_speed_min_tb_20260104_195317.csv
data/raw/2026-01-06_pooltest01/volt/: motor_data_20260104_195325.csv
docs/: 快捷命令行.md
docs/design/: dataset_spec.md  imu_plot_style.md  plot_style_guide.md
docs/math/: appendix.tex  assumptions.tex  control_interface.tex  discussion.tex  dynamics.tex  learning.tex  macros.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv  notation.tex  rollout.tex  sensors.tex  uncertainty.tex
src/uwnav_dynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uwnav_dynamics/analysis/: imu_stats.py
src/uwnav_dynamics/cli/: __init__.py  eval.py  pipeline.py  train.py  utils.py
src/uwnav_dynamics/core/: timebase.py
src/uwnav_dynamics/dataset/: dataset_spec.py
src/uwnav_dynamics/eval/: evaluate.py
src/uwnav_dynamics/io/: dataset_spec.py
src/uwnav_dynamics/models/losses/: nll.py  (+1 more)
src/uwnav_dynamics/preprocess/: build_dataset.py  sliding_window.py
src/uwnav_dynamics/train/: config.py  data.py  run_train.py  trainer.py
(+34 files in other folders)
